# factur-ia-api-ia

./: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/: __init__.py  main.py
src/callback/: client.py  schemas.py
src/core/: config.py  security.py
src/extractions/: confidence.py  llm_client.py  ocr_extractor.py  pdf_detector.py  pdf_extractor.py  prompts.py  router.py  schemas.py  service.py  structurer.py  validation.py
tests/: conftest.py  test_callback_client.py  test_confidence.py  test_extractions.py  test_health.py  test_llm_client.py  test_main.py  test_ocr_extractor.py  test_pdf_detector.py  test_pdf_extractor.py  test_service.py  test_structurer.py  test_validation.py
